* BUG#9019 Fix from commit d5f56ad: wrong target on insurer claim_stock_reports Many2Many field
* BUG#9019 Add a searcher on claim_stock_reports field

Version 2.0 - 2018-04-13
* FEA#7889 Allow generating insurer reports about claims
* FEA#0000 Changelog file creation