@@ -1,3 +1,4 @@
+* BUG#9290 Allow to print a claim service
 * BUG#9019 Fix from commit d5f56ad: wrong target on insurer claim_stock_reports Many2Many field
 * BUG#9019 Add a searcher on claim_stock_reports field
 
